--- a/index.html
+++ b/index.html
@@ -56,6 +56,33 @@
       <button class="button">Contactame</button>
       <a href="https://drive.google.com/link-al-cv" class="button" target="_blank" rel="noopener noreferrer">Mi Currículum</a>
   </div>
+
+  <div class="iconos-sociales">
+    <a href="https://github.com/beluevoraa" target="_blank" rel="noopener noreferrer">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="#DCC500" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-github">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+      </svg>
+    </a>
+    <a href="https://www.linkedin.com/in/mariabelenevoramartinez/" target="_blank" rel="noopener noreferrer">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="#DCC500" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-brand-linkedin">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M8 11v5" />
+        <path d="M8 8v.01" />
+        <path d="M12 16v-5" />
+        <path d="M16 16v-3a2 2 0 1 0 -4 0" />
+        <path d="M3 7a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v10a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z" />
+      </svg>
+    </a>
+    <a href="https://drive.google.com/file/d/1r03SxQQhgQY7gcWUrMJjSs89_eTeoDDK/view?usp=sharing" target="_blank" rel="noopener noreferrer">
+      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" fill="none" stroke="#DCC500" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icon-tabler-heart">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
+      </svg>
+    </a>
+  </div>
+  
+</div>
 </div>
 <div id="tsparticles"></div>
 
@@ -87,16 +114,18 @@
    
     <div class="project-info">
       <h3>Página e-commerce </h3>
-      <p>Proyecto final JAP!. Funcionaliad completa. Tecnologías utilizadas: </p>
-      <a href="#" class="btn">Ver Código</a>
+      <p>Cuenta con todas las funcionalidades necesarias para una experiencia completa de compra en línea. </p> <p> Incluye un carrito de compras funcional que permite agregar y eliminar productos, un sistema de calificaciones y comentarios para los productos, 
+        un apartado de productos relacionados, un proceso de compra detallado con cálculo dinámico de costos y selección de métodos de pago</p> <p> Posee un diseño responsive adaptado para diferentes dispositivos. </p>
+      <a href="https://github.com/MarciaBeron/proyecto-final-jap" class="button">Ver Código</a>
     </div>
 
   </div>
     <div class="project">
     <div class="project-info">
       <h3>Invitaciones digitales freelance </h3>
-      <p>Diseño de invitaciones. Tecnologías utilizadas: </p>
-      <a href="#" class="btn">Ver Código</a>
+      <p>Posee detalles como ubicación en tiempo real, música integrada, confirmación de asistencia interactiva y diseño atractivo. </p>
+      <p> Es completamente responsive, asegurando una experiencia de usuario fluida en cualquier dispositivo.  </p>
+      <a href="https://vercel.com/belens-projects-ba7c0376/cumple-de-cae" class="button">Ver Código</a>
   </div>
   <img src="img/invitacion.png" alt="Imagen Proyecto 1">
 
