--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2 id="aboutTitle">Sobre mí</h2>
         <p id="aboutText1">¡Hola! Soy Belén y me encanta darle un toque bonito a todo lo que hago.</p>
         <p id="aboutText2">Disfruto mucho creando proyectos que sean tanto estéticos como funcionales, combinando mi creatividad y utilidad en cada detalle.</p>
-       <p id="aboutText3">Estudio la <span id="career">Tecnicatura en informática</span> en Facultad de Ingeniería (FiNG) y realicé <span id="course">JaP!</span> con Ceibal y 
+       <p id="aboutText3">Este año planeo comenzar la carrera de  <span id="career">Ingenería en computación</span> en la Facultad de Ingeniería (FiNG) como parte de mi camino hacia el logro de mis metas personales y profesionales. Además, he completado el programa <span id="course">JaP!</span>ofrecido por Ceibal y 
         CUTI (Cámara Uruguaya de Tecnologías de la Información).      </p>
         <p id="aboutText4">Como estoy en constante aprendizaje continúo realizando cursos en Udemy y Coursera.</p>
       </div>
